# bitmath

./: .coveragerc  .gitignore  .packit.yaml  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  NEWS.rst  README.rst  SECURITY.md  bitmath.1  bitmath.1.asciidoc.in  context7.json  docker-compose.yaml  full_demo.py  pyproject.toml  python-bitmath.spec  python-bitmath.spec.in  requirements.txt  setup.py  setup.py.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  codeql.yml  publish.yml  python.yml
LICENSES/: MIT.txt
bitmath/: __init__.py
bitmath/integrations/: __init__.py  bmargparse.py
docsite/source/: classes.rst  commandline.rst  conf.py  conf.py.in  contact.rst  contributing.rst  copyright.rst  index.rst  index.rst.in  instances.rst  integration_examples.rst  module.rst  real_life_examples.rst  simple_examples.rst
docsite/source/appendices/: mixed_math.rst  on_units.rst
tests/: __init__.py  test_argparse_type.py  test_basic_math.py  test_best_prefix_BASE.py  test_best_prefix_NIST.py  test_best_prefix_SI.py  test_bitwise_operations.py  test_cli.py  test_context_manager.py  test_context_manager_thread_safe.py  test_file_size.py  test_future_math.py  test_init.py  test_instantiating.py  test_parse.py  test_parse_strict.py  test_parse_unsafe.py  test_progressbar.py  test_properties.py  test_query_capacity.py  test_query_device_capacity.py  test_representation.py  test_rich_comparison.py  test_rounding.py  test_sorting.py  test_sum.py  test_to_Type_conversion.py  test_to_built_in_conversion.py  test_unique_testcase_names.sh  test_utils.py
