[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitmath"
version = "2.0.0"
description = "Pythonic module for representing and manipulating file sizes with different prefix notations (file size unit conversion)"
readme = "README.rst"
requires-python = ">=3.11"
authors = [
  { name = "Tim Case", email = "bitmath@lnx.cx" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: File Sharing",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Acceptance",
  "Topic :: Software Development :: Testing :: Unit",
  "Topic :: System :: Filesystems",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing :: Filters",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://bitmath.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/timlnx/bitmath/issues"
"Git Repo" = "https://github.com/timlnx/bitmath"

[project.scripts]
bitmath = "bitmath:cli_script"

[tool.hatch.build.targets.wheel]
packages = ["bitmath", "bitmath.integrations"]

[tool.hatch.publish.index]
disable = true
